--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -147,12 +147,13 @@ jobs:
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER }}
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY }}
       - name: Push image to Google Cloud Container Registry
-        with:
-          arguments: grails-forge-analytics-postgres:dockerPushNative -PdockerImageName="$IMAGE_NAME"
+        uses: gradle/gradle-build-action@v2
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER }}
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY }}
+        with:
+          arguments: grails-forge-analytics-postgres:dockerPushNative -PdockerImageName="$IMAGE_NAME"          
       - name: Deploy Docker image
         run: |
           gcloud components install beta --quiet
