--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -132,6 +132,7 @@ jobs:
           distribution: 'adopt'
           java-version: '11'
       - name: Run Tests
+        uses: gradle/gradle-build-action@v2
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER }}
@@ -139,13 +140,14 @@ jobs:
         with:
           arguments: grails-forge-analytics-postgres:test
       - name: Build Docker image
+        uses: gradle/gradle-build-action@v2
         # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
-        with:
-          arguments: grails-forge-analytics-postgres:dockerBuildNative -PdockerImageName="$IMAGE_NAME"
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_USER }}
           GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY }}
+        with:
+          arguments: grails-forge-analytics-postgres:dockerBuildNative -PdockerImageName="$IMAGE_NAME"
       - name: Push image to Google Cloud Container Registry
         uses: gradle/gradle-build-action@v2
         env:
