--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -74,6 +74,11 @@
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
+            <artifactId>views-gradle</artifactId>
+            <version>3.0.0-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.grails.plugins</groupId>
             <artifactId>embedded-mongodb</artifactId>
             <version>2.0.1</version>
         </dependency>
