--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>grails-gradle-plugin</artifactId>
-            <version>6.0.0-RC1</version>
+            <version>6.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>views-gradle</artifactId>
-            <version>3.0.0-RC1</version>
+            <version>3.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
