--- a/snapshot/swagger/grails-application-forge-6.0.0-SNAPSHOT.yml
+++ b/snapshot/swagger/grails-application-forge-6.0.0-SNAPSHOT.yml
@@ -5,6 +5,8 @@ info:
   license:
     name: Apache 2.0
   version: 6.0.0-SNAPSHOT
+servers:
+  - url: https://grailsforge-snapshot-cjmq3uyfcq-uc.a.run.app
 paths:
   /:
     get:
