--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>hibernate5</artifactId>
-            <version>8.0.0-RC1</version>
+            <version>8.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
