--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>views-gradle</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
