--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ micronautDocsVersion=2.0.0
 micronautVersion=3.9.4
 rockerVersion=1.3.0
 groovyVersion=3.0.17
-grailsVersion=6.0.0
+grailsVersion=6.0.1-SNAPSHOT
 spockVersion=2.0-groovy-3.0
 title=Grails Application Forge
 projectDesc=Generates Grails applications
