--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -128,6 +128,11 @@
             <version>4.10.0</version>
         </dependency>
         <dependency>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>gradle-jrebel-plugin</artifactId>
+            <version>1.1.12</version>
+        </dependency>
+        <dependency>
             <groupId>com.bertramlabs.plugins</groupId>
             <artifactId>asset-pipeline-grails</artifactId>
             <version>4.3.0</version>
