--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=6.1.0-SNAPSHOT
+projectVersion=6.1.0
 micronautBuildVersion=1.1.5
 micronautDocsVersion=2.0.0
 micronautVersion=3.10.2
