--- a/grails-forge-web-netty/src/main/resources/application.yml
+++ b/grails-forge-web-netty/src/main/resources/application.yml
@@ -4,6 +4,9 @@ micronaut:
       swagger:
         paths: classpath:META-INF/swagger
         mapping: /swagger/**
+      swagger-ui:
+        paths: classpath:META-INF/swagger/views/swagger-ui
+        mapping: /swagger-ui/**
   server:
     cors:
       enabled: true
