--- a/grails-forge-web-netty/src/main/resources/application.yml
+++ b/grails-forge-web-netty/src/main/resources/application.yml
@@ -7,6 +7,9 @@ micronaut:
       swagger-ui:
         paths: classpath:META-INF/swagger/views/swagger-ui
         mapping: /swagger-ui/**
+      rapidoc:
+        paths: classpath:META-INF/swagger/views/rapidoc
+        mapping: /rapidoc/**
   server:
     cors:
       enabled: true
