Revert "Update grailsVersion to 6.1.1 (#247)"
This reverts commit c4cc97f1d9fb9cb40530b617426c37fdaaca0c3f.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ micronautDocsVersion=2.0.0
 micronautVersion=3.10.3
 rockerVersion=1.4.0
 groovyVersion=3.0.19
-grailsVersion=6.1.1
+grailsVersion=6.1.1-SNAPSHOT
 spockVersion=2.0-groovy-3.0
 title=Grails Application Forge
 projectDesc=Generates Grails applications
