--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ micronautDocsVersion=2.0.0
 micronautVersion=3.10.3
 rockerVersion=1.4.0
 groovyVersion=3.0.19
-grailsVersion=6.1.1-SNAPSHOT
+grailsVersion=6.1.1
 spockVersion=2.0-groovy-3.0
 title=Grails Application Forge
 projectDesc=Generates Grails applications
