--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
         id: release_version
         run: |
           echo "Update grailsVersion to ${{steps.release_version.outputs.value}}"
-          sed -i "s/^grailsVersion.*$/grailsVersion\=${GITHUB_REF:11}/" gradle.properties
-          echo "value=${GITHUB_REF:11}" >> $GITHUB_OUTPUT
+          sed -i "s/^grailsVersion.*$/grailsVersion\=${{GITHUB_REF:11}}/" gradle.properties
+          echo "value=${{GITHUB_REF:11}}" >> $GITHUB_OUTPUT
       - uses: stefanzweifel/git-auto-commit-action@v4.16.0
         with:
           commit_message: Update grailsVersion to ${{ steps.release_version.outputs.value }}
@@ -111,7 +111,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v${GITHUB_REF:11}
+          ref: v${{GITHUB_REF:11}}
           token: ${{ secrets.GH_TOKEN }}
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
@@ -173,7 +173,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v${GITHUB_REF:11}
+          ref: v${{GITHUB_REF:11}}
           token: ${{ secrets.GH_TOKEN }}
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
@@ -236,7 +236,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v${GITHUB_REF:11}
+          ref: v${{GITHUB_REF:11}}
           token: ${{ secrets.GH_TOKEN }}
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1.1.5
@@ -283,7 +283,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v${GITHUB_REF:11}
+          ref: v${{GITHUB_REF:11}}
           token: ${{ secrets.GH_TOKEN }}
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1.1.5
@@ -330,7 +330,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v${GITHUB_REF:11}
+          ref: v${{GITHUB_REF:11}}
           token: ${{ secrets.GH_TOKEN }}
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1.1.5
@@ -385,7 +385,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: v${GITHUB_REF:11}
+          ref: v${{GITHUB_REF:11}}
           token: ${{ secrets.GH_TOKEN }}
       - name: Grails SDK Minor Release
         if: contains(needs.build.outputs.release_version, 'M')
