--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
           commit_user_email: ${{ env.GIT_USER_EMAIL }}
           commit_author: ${{ env.GIT_USER_NAME }} <${{ env.GIT_USER_EMAIL }}>
           file_pattern: gradle.properties
+          branch: 6.1.x
       - name: Run pre-release
         uses: micronaut-projects/github-actions/pre-release@master
         with:
