--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
-projectVersion=6.1.2-SNAPSHOT
+projectVersion=6.1.1
 micronautBuildVersion=1.1.5
 micronautDocsVersion=2.0.0
 micronautVersion=3.10.3
 rockerVersion=1.4.0
 groovyVersion=3.0.19
-grailsVersion=6.1.1
+grailsVersion=6.1.2-SNAPSHOT
 spockVersion=2.0-groovy-3.0
 title=Grails Application Forge
 projectDesc=Generates Grails applications
