chore(ci): Update Renovate configurations for automatic grouping of dependency updates
Configure Renovate to automatically group dependency updates for com.bertramlabs.asset-pipeline-gradle and com.bertramlabs.asset-pipeline-grails.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,7 +16,7 @@
     },
     {
       "matchPackagePatterns": [
-        "^com\\.bertramlabs\\.plugins:asset-pipeline"
+        "^com\\.bertramlabs\\.plugins:asset-pipeline.*"
       ],
       "groupName": "asset-pipeline"
     }
