--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ jobs:
   build:
     name: Release artifacts to Bintray, Maven Central & SDKMAN, and publish documentation
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       release_version: ${{ steps.release_version.outputs.value }}
     env:
@@ -31,12 +33,13 @@ jobs:
           echo "value=${GITHUB_REF:11}" >> $GITHUB_OUTPUT
       - uses: stefanzweifel/git-auto-commit-action@v5.0.0
         with:
-          commit_message: Update grailsVersion to ${{ steps.release_version.outputs.value }}
+          commit_message: |
+            chore: Update grailsVersion to ${{ steps.release_version.outputs.value }}
           commit_user_name: ${{ env.GIT_USER_NAME }}
           commit_user_email: ${{ env.GIT_USER_EMAIL }}
           commit_author: ${{ env.GIT_USER_NAME }} <${{ env.GIT_USER_EMAIL }}>
-          file_pattern: gradle.properties
-          branch: 6.1.x
+          file_pattern: .
+          branch: 6.2.x
       - name: Run pre-release
         uses: micronaut-projects/github-actions/pre-release@master
         with:
@@ -73,7 +76,7 @@ jobs:
         env:
           BETA: ${{ contains(steps.release_version.outputs.value, 'M') }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          BASE_BRANCH: 6.1.x
+          BASE_BRANCH: 6.2.x
           BRANCH: gh-pages
           FOLDER: build/docs
           VERSION: ${{ steps.release_version.outputs.value }}
