--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
+          distribution: 'temurin'
           java-version: '11'
+      - uses: gradle/actions/setup-gradle@v3
       - name: Set the current release version
         id: release_version
         run: |
@@ -51,7 +53,6 @@ jobs:
           SECRING_FILE: ${{ secrets.SECRING_FILE }}
         run: echo $SECRING_FILE | base64 -d > ${{ github.workspace }}/secring.gpg
       - name: Publish to Maven Central
-        uses: gradle/gradle-build-action@v3
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
@@ -59,8 +60,7 @@ jobs:
           SONATYPE_STAGING_PROFILE_ID: ${{ secrets.SONATYPE_STAGING_PROFILE_ID }}
           SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
           SIGNING_PASSPHRASE: ${{ secrets.SIGNING_PASSPHRASE }}
-        with:
-          arguments: -Psigning.secretKeyRingFile=${{ github.workspace }}/secring.gpg publishToSonatype closeSonatypeStagingRepository docs
+        run: ./gradlew -Psigning.secretKeyRingFile=${{ github.workspace }}/secring.gpg publishToSonatype closeSonatypeStagingRepository docs
       - name: Upload CLI Zip
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -113,6 +113,7 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
         with:
@@ -122,31 +123,26 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
       - name: Set up JDK
-        uses: actions/setup-java@v4.2.1
+        uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
+          distribution: 'temurin'
           java-version: '11'
+      - uses: gradle/actions/setup-gradle@v3
       - name: Run Tests
-        uses: gradle/gradle-build-action@v3
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        with:
-          arguments: grails-forge-api:test grails-forge-web-netty:test
+        run: ./gradlew grails-forge-api:test grails-forge-web-netty:test
       - name: Build Docker image
         # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
-        uses: gradle/gradle-build-action@v3
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ needs.build.outputs.release_version }}
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        with:
-          arguments: grails-forge-web-netty:dockerBuildNative -PdockerImageName=${{ env.IMAGE_NAME }}
+        run: ./gradlew grails-forge-web-netty:dockerBuildNative -PdockerImageName=${{ env.IMAGE_NAME }}
       - name: Push image to Google Cloud Container Registry
-        uses: gradle/gradle-build-action@v3
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}:${{ needs.build.outputs.release_version }}
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        with:
-          arguments: grails-forge-web-netty:dockerPushNative -PdockerImageName=${{ env.IMAGE_NAME }}
+        run: ./gradlew grails-forge-web-netty:dockerPushNative -PdockerImageName=${{ env.IMAGE_NAME }}
       - name: Deploy Docker image
         env:
           release_version: ${{ needs.build.outputs.release_version }}
@@ -167,6 +163,7 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
         with:
@@ -176,31 +173,26 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
       - name: Set up JDK
-        uses: actions/setup-java@v4.2.1
+        uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
+          distribution: 'temurin'
           java-version: '11'
+      - uses: gradle/actions/setup-gradle@v3
       - name: Run Tests
-        uses: gradle/gradle-build-action@v3
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        with:
-          arguments: grails-forge-analytics-postgres:test
+        run: ./gradlew grails-forge-analytics-postgres:test
       - name: Build Docker image
-        uses: gradle/gradle-build-action@v3
         # To deploy native executables built with GraalVM replace dockerBuild with dockerBuildNative and dockerPush with dockerPushNative. First, try that it works locally.
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}-analytics:${{ needs.build.outputs.release_version }}
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        with:
-          arguments: grails-forge-analytics-postgres:dockerBuildNative -PdockerImageName=${{ env.IMAGE_NAME }}
+        run: ./gradlew grails-forge-analytics-postgres:dockerBuildNative -PdockerImageName=${{ env.IMAGE_NAME }}
       - name: Push image to Google Cloud Container Registry
-        uses: gradle/gradle-build-action@v3
         env:
           IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APP_NAME }}-analytics:${{ needs.build.outputs.release_version }}
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-        with:
-          arguments: grails-forge-analytics-postgres:dockerPushNative -PdockerImageName=${{ env.IMAGE_NAME }}
+        run: ./gradlew grails-forge-analytics-postgres:dockerPushNative -PdockerImageName=${{ env.IMAGE_NAME }}
       - name: Deploy Docker image
         env:
           release_version: ${{ needs.build.outputs.release_version }}
@@ -222,6 +214,7 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
@@ -230,9 +223,7 @@ jobs:
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build the JAR
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: grails-cli:shadowJar --no-daemon
+        run: ./gradlew grails-cli:shadowJar --no-daemon
       - name: Build Native Image
         run: native-image --no-fallback --allow-incomplete-classpath -cp grails-cli/build/libs/grails-cli-*-all.jar
       - name: Verify Build
@@ -267,6 +258,7 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
@@ -275,9 +267,7 @@ jobs:
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build the JAR
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: grails-cli:shadowJar --no-daemon
+        run: ./gradlew grails-cli:shadowJar --no-daemon
       - name: Build Native Image
         run: native-image --no-fallback --allow-incomplete-classpath -cp grails-cli/build/libs/grails-cli-*-all.jar
       - name: Verify Build
@@ -312,6 +302,7 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
@@ -319,10 +310,9 @@ jobs:
           java-version: '11'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: gradle/actions/setup-gradle@v3
       - name: Build JAR File
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: grails-cli:copyShadowJar --no-daemon
+        run: ./gradlew grails-cli:copyShadowJar --no-daemon
       - name: Build Native Image
         shell: powershell
         run: native-image.cmd --no-fallback --allow-incomplete-classpath -cp build/libs/cli.jar
@@ -364,19 +354,21 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
+      - uses: gradle/wrapper-validation-action@v2
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+      - uses: gradle/actions/setup-gradle@v3
       - name: Grails SDK Minor Release
         if: contains(needs.build.outputs.release_version, 'M')
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: sdkMinorRelease
+        run: ./gradlew sdkMinorRelease
         env:
           GVM_SDKVENDOR_KEY: ${{ secrets.GVM_SDKVENDOR_KEY }}
           GVM_SDKVENDOR_TOKEN: ${{ secrets.GVM_SDKVENDOR_TOKEN }}
       - name: Grails SDK Major Release
         if: startsWith(needs.build.outputs.release_version, '6.') && !contains(needs.build.outputs.release_version, 'M')
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: sdkMajorRelease
+        run: ./gradlew sdkMajorRelease
         env:
           GVM_SDKVENDOR_KEY: ${{ secrets.GVM_SDKVENDOR_KEY }}
           GVM_SDKVENDOR_TOKEN: ${{ secrets.GVM_SDKVENDOR_TOKEN }}
